fix wrapping

--- a/style.css
+++ b/style.css
@@ -231,6 +231,7 @@ body {
     width: 80px;
     height: 25px;
     margin-right: 25px;
+    margin-left: 25px;
 }
 
 /* footer */
